# my_beginner_tutorials

./: CMakeLists.txt  README.md  clang-tidy_output.txt  clang_tidy_output.txt  compile_commands.json  cpplint_output.txt  package.xml
install/: local_setup.sh  setup.sh
install/beginner_tutorials/lib/beginner_tutorials/: client  talker  test_talker_tf
install/beginner_tutorials/share/ament_index/resource_index/package_run_dependencies/: beginner_tutorials
install/beginner_tutorials/share/ament_index/resource_index/parent_prefix_path/: beginner_tutorials
install/beginner_tutorials/share/beginner_tutorials/: local_setup.sh  package.sh
launch/: integration_test.launch.yaml  record_bag.launch.py  service.launch.py
log/: latest_build
results/recording_2024-11-15_17-59-59/: metadata.yaml  recording_2024-11-15_17-59-59_0.db3
src/: draft.cpp  listener_node.cpp  publisher_member_function.cpp  service_client_node.cpp  service_server_node.cpp  talker_node.cpp  test_talker_tf.cpp
test/: integration_test_node.cpp
